Appbar shadow fixed. Hides horizontal scroll bar on tabs. Reduce tabs size to 400px max. Branch: master

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -16,12 +16,15 @@ h1 {
 }
 
 .wrapper{
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    position: absolute;
+    right: 0;
+    left: 0;
+    z-index: 999;
 }
 
 editor {
     position: absolute;
-    top: 53px;
+    top: 48px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -52,41 +55,22 @@ nav {
         color: #ffffff;
     }
 
-    .title{
-        font-size: 24px;
-        cursor: default;
-    }
+    .title-wrapper{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
-    .user-wrapper{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        font-size: 13px;
-        font-weight: 500;
-        color: rgba(0,0,0,0.6);
-        @media only screen and (max-width : 600px) { height: 54px; }
-        @media only screen and (min-width : 601px) { height: 64px; }
-
-        span{
-            font-weight: normal;
-            color: #ffffff;
-            font-size: 13px;
-            max-width: 100%;
-            opacity: .7;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            transition: opacity .2s;
-            white-space: nowrap;
-            margin-right: 8px;
-        }
-        img{
-            border-radius: 50%;
-            height: 32px;
-            width: 32px;
+        .title{
+            font-size: 24px;
+            cursor: default;
         }
     }
 
+    .tabs{
+        max-width: 400px;
+        float: right;
+        overflow-x: hidden;
+    }
 }
 #toolbar{
     margin-bottom: 0;
